--- a/mystyle.css
+++ b/mystyle.css
@@ -9,6 +9,12 @@ body{
   background-color: rgb(197, 197, 197);
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 10px;
+}
+
 div {
   background: rgba(0, 128, 0, 0.3) /* Green background with 30% opacity */
 }
@@ -19,24 +25,41 @@ div {
         text-align: left;
         font-size: 20px;
       }
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        
-      }
   }
+
+  @media only screen and (min-width: 600px)
+   {    
+    h1 {
+    color: rgb(53, 53, 2);
+    text-align: center;
+    font-size: 45px;
+  }
+}
+
+  @media only screen and (min-width: 768px)
+   {    
+    h1 {
+    color: rgb(119, 119, 1);
+    text-align: center;
+    font-size: 45px;
+  }
+
+}
+
+  @media only screen and (min-width: 992px) { 
+  h1 {
+    color: rgb(201, 201, 3);
+    text-align: center;
+    font-size: 45px;
+  }
+
+}
+
   @media only screen and (min-width: 1200px) {
     h1 {
         color: yellow;
         text-align: center;
         font-size: 45px;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        
       }
   }
   @media only screen and (min-width: 1800px) {
@@ -45,10 +68,5 @@ div {
         text-align: center;
         font-size: 58px;
       }
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-        
-      }
+
   }
