--- a/mystyle.css
+++ b/mystyle.css
@@ -7,11 +7,12 @@
 
 body{
   background-color: rgb(197, 197, 197);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 4fr 2fr;
   grid-gap: 10px;
 }
 
