--- a/mystyle.css
+++ b/mystyle.css
@@ -12,8 +12,8 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 .frame {
-  width: auto;
-  height: auto;
+  width: 560px;
+  height: 315px;
 }
 
 .grid {
