--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,8 @@
   }
 .item-a{
     text-align: center;
+    grid-row-start: 1;
+    grid-row-end: 5;
 }
 .item{
   text-align: center;
@@ -28,7 +30,7 @@ div {
 
   @media only screen and (max-width: 600px) {
     h1 {
-        color: rgb(0, 133, 0);
+        color: rgb(20, 20, 1);
         text-align: left;
         font-size: 20px;
       }
@@ -55,7 +57,7 @@ div {
 
   @media only screen and (min-width: 992px) { 
   h1 {
-    color: rgb(201, 201, 3);
+    color: rgb(235, 0, 176);
     text-align: center;
     font-size: 45px;
   }
