--- a/mystyle.css
+++ b/mystyle.css
@@ -1,4 +1,5 @@
 .grid{
+    width: 100%;
       justify-content: space-around;
   }
 .item-a{
@@ -7,7 +8,7 @@
     grid-row-end: 5;
 }
 .item{
-  text-align: center;
+  text-align: left;
   overflow: hidden;
 }
 body{
@@ -22,7 +23,7 @@ body{
 .grid {
   display: grid;
   grid-template-columns: 1fr 4fr 2fr;
-  grid-gap: 10px;
+  grid-gap: 1rem;
 }
 
 div {
